--- a/create-campaigns/getting-started.html
+++ b/create-campaigns/getting-started.html
@@ -3,17 +3,17 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Getting Started - Incentra</title>
+        <title>Getting Started - Brevis Incentra</title>
 
 
         <!-- Custom HTML head -->
-
+        <link rel="icon" href="favicon-dark.png" media="(prefers-color-scheme: light)">
+        <link rel="icon" href="favicon-light.png" media="(prefers-color-scheme: dark)">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
-        <link rel="icon" href="../favicon-de23e50b.svg">
-        <link rel="shortcut icon" href="../favicon-8114d1fc.png">
+        <link rel="shortcut icon" href="../favicon-3f1855d8.png">
         <link rel="stylesheet" href="../css/variables-8adf115d.css">
         <link rel="stylesheet" href="../css/general-2459343d.css">
         <link rel="stylesheet" href="../css/chrome-cc69e1fb.css">
@@ -36,10 +36,10 @@
             const path_to_root = "../";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "../searchindex-ccbb8b4f.js";
+            window.path_to_searchindex_js = "../searchindex-3c8a8ee5.js";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="../toc-418577b2.js"></script>
+        <script src="../toc-a782aae6.js"></script>
     </head>
     <body>
     <div id="mdbook-help-container">
@@ -138,7 +138,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">Incentra</h1>
+                    <h1 class="menu-title">Brevis Incentra</h1>
 
                     <div class="right-buttons">
                         <a href="../print.html" title="Print this book" aria-label="Print this book">
@@ -175,7 +175,9 @@
 
                 <div id="mdbook-content" class="content">
                     <main>
-                        <h1 id="getting-started"><a class="header" href="#getting-started">Getting Started</a></h1>
+                        <hr>
+<h2 id="description-everything-you-need-to-launch-your-first-campaign"><a class="header" href="#description-everything-you-need-to-launch-your-first-campaign">description: Everything you need to launch your first campaign</a></h2>
+<h1 id="getting-started"><a class="header" href="#getting-started">Getting Started</a></h1>
 <p>On Incentra, campaigns can be created and managed in the <a href="https://incentra-portal.brevis.network/">Brevis Incentra Portal</a>. Here is a checklist before you create a campaign:</p>
 <ul>
 <li>Whitelist your campaign creator address</li>
@@ -185,7 +187,7 @@
 </ul>
 <h3 id="campaign-creator-whitelist"><a class="header" href="#campaign-creator-whitelist">Campaign Creator Whitelist</a></h3>
 <p>Before getting started, please note that <strong>your wallet address must be whitelisted first</strong> to create a campaign. While anyone can create a campaign through the smart contract, Incentra exclusively recognizes and processes those created by whitelisted addresses.  Please contact us to get whitelisted. </p>
-<p><img src="../assets/Screenshot 2025-05-15 at 17.01.27.png" alt=""><figcaption></figcaption></p>
+<figure><img src="../.gitbook/assets/Screenshot 2025-05-15 at 17.01.27.png" alt=""><figcaption></figcaption></figure>
 <h3 id="check-supported-chains"><a class="header" href="#check-supported-chains">Check Supported Chains</a></h3>
 <p>In the Brevis Incentra Portal, you will need to select the “data source chain” and the “reward claim chain”. Data source chain is where your protocol is deployed and reward claim chain is where your reward token is deployed.</p>
 <p>Please contact us if you cannot find the data source chain or the reward claim chain that suits your needs. We are happy to add for your requirements.</p>
