--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Introduction - Incentra</title>
+        <title>Introduction - Brevis Incentra</title>
 
 
         <!-- Custom HTML head -->
-
+        <link rel="icon" href="favicon-dark.png" media="(prefers-color-scheme: light)">
+        <link rel="icon" href="favicon-light.png" media="(prefers-color-scheme: dark)">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
-        <link rel="icon" href="favicon-de23e50b.svg">
-        <link rel="shortcut icon" href="favicon-8114d1fc.png">
+        <link rel="shortcut icon" href="favicon-3f1855d8.png">
         <link rel="stylesheet" href="css/variables-8adf115d.css">
         <link rel="stylesheet" href="css/general-2459343d.css">
         <link rel="stylesheet" href="css/chrome-cc69e1fb.css">
@@ -36,10 +36,10 @@
             const path_to_root = "";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "searchindex-ccbb8b4f.js";
+            window.path_to_searchindex_js = "searchindex-3c8a8ee5.js";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="toc-418577b2.js"></script>
+        <script src="toc-a782aae6.js"></script>
     </head>
     <body>
     <div id="mdbook-help-container">
@@ -138,7 +138,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">Incentra</h1>
+                    <h1 class="menu-title">Brevis Incentra</h1>
 
                     <div class="right-buttons">
                         <a href="print.html" title="Print this book" aria-label="Print this book">
@@ -175,8 +175,12 @@
 
                 <div id="mdbook-content" class="content">
                     <main>
-                        <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
-<p><img src="../assets/1661011026.png" alt=""><figcaption></figcaption></p>
+                        <hr>
+<h2 id="description---drive-sustainable-growth-with-reliable-secure-and-verifiable-incentive-distribution"><a class="header" href="#description---drive-sustainable-growth-with-reliable-secure-and-verifiable-incentive-distribution">description: &gt;-
+Drive sustainable growth with reliable, secure, and verifiable incentive
+distribution.</a></h2>
+<h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
+<figure><img src=".gitbook/assets/1661011026.png" alt=""><figcaption></figcaption></figure>
 <p>Welcome to Incentra - a reliable, secure, and verifiable incentive distribution platform for DeFi protocols powered by <a href="https://coprocessor-docs.brevis.network/">Brevis zkCoprocessor</a>. Incentra is designed to connect protocols with liquidity providers and individual users, and to incentivize liquidity provision, token holding and many other interactions with the protocols. It may help to achieve massive success in increasing the TVL and other forms of user proactivity and engagement with the protocols.</p>
 
                     </main>
