--- a/technical-architecture.html
+++ b/technical-architecture.html
@@ -3,17 +3,17 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Technical Architecture - Incentra</title>
+        <title>Technical Architecture - Brevis Incentra</title>
 
 
         <!-- Custom HTML head -->
-
+        <link rel="icon" href="favicon-dark.png" media="(prefers-color-scheme: light)">
+        <link rel="icon" href="favicon-light.png" media="(prefers-color-scheme: dark)">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
-        <link rel="icon" href="favicon-de23e50b.svg">
-        <link rel="shortcut icon" href="favicon-8114d1fc.png">
+        <link rel="shortcut icon" href="favicon-3f1855d8.png">
         <link rel="stylesheet" href="css/variables-8adf115d.css">
         <link rel="stylesheet" href="css/general-2459343d.css">
         <link rel="stylesheet" href="css/chrome-cc69e1fb.css">
@@ -36,10 +36,10 @@
             const path_to_root = "";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "searchindex-ccbb8b4f.js";
+            window.path_to_searchindex_js = "searchindex-3c8a8ee5.js";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="toc-418577b2.js"></script>
+        <script src="toc-a782aae6.js"></script>
     </head>
     <body>
     <div id="mdbook-help-container">
@@ -138,7 +138,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">Incentra</h1>
+                    <h1 class="menu-title">Brevis Incentra</h1>
 
                     <div class="right-buttons">
                         <a href="print.html" title="Print this book" aria-label="Print this book">
@@ -175,9 +175,11 @@
 
                 <div id="mdbook-content" class="content">
                     <main>
-                        <h1 id="technical-architecture"><a class="header" href="#technical-architecture">Technical Architecture</a></h1>
+                        <hr>
+<h2 id="description-a-10000-feet-overview-of-incentras-technical-architecture"><a class="header" href="#description-a-10000-feet-overview-of-incentras-technical-architecture">description: A 10,000-feet overview of Incentra’s technical architecture</a></h2>
+<h1 id="technical-architecture"><a class="header" href="#technical-architecture">Technical Architecture</a></h1>
 <p>The diagram below shows Incentra’s high-level architecture and workflow to support a campaign. </p>
-<p><img src="assets/Screenshot 2025-05-02 at 4.16.53 PM.png" alt=""><figcaption></figcaption></p>
+<figure><img src=".gitbook/assets/Screenshot 2025-05-02 at 4.16.53 PM.png" alt=""><figcaption></figcaption></figure>
 <p>A campaign is divided into multiple epochs (e.g., 4 hours per epoch). Once a campaign is created, the Incentra server performs the following actions during <em>each epoch</em>:</p>
 <ol>
 <li>Fetches blockchain data relevant to the campaign.</li>
