--- a/welcome/why-use-incentra.html
+++ b/welcome/why-use-incentra.html
@@ -3,17 +3,17 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Why Use Incentra - Incentra</title>
+        <title>Why Use Incentra - Brevis Incentra</title>
 
 
         <!-- Custom HTML head -->
-
+        <link rel="icon" href="favicon-dark.png" media="(prefers-color-scheme: light)">
+        <link rel="icon" href="favicon-light.png" media="(prefers-color-scheme: dark)">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
-        <link rel="icon" href="../favicon-de23e50b.svg">
-        <link rel="shortcut icon" href="../favicon-8114d1fc.png">
+        <link rel="shortcut icon" href="../favicon-3f1855d8.png">
         <link rel="stylesheet" href="../css/variables-8adf115d.css">
         <link rel="stylesheet" href="../css/general-2459343d.css">
         <link rel="stylesheet" href="../css/chrome-cc69e1fb.css">
@@ -36,10 +36,10 @@
             const path_to_root = "../";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "../searchindex-ccbb8b4f.js";
+            window.path_to_searchindex_js = "../searchindex-3c8a8ee5.js";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="../toc-418577b2.js"></script>
+        <script src="../toc-a782aae6.js"></script>
     </head>
     <body>
     <div id="mdbook-help-container">
@@ -138,7 +138,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">Incentra</h1>
+                    <h1 class="menu-title">Brevis Incentra</h1>
 
                     <div class="right-buttons">
                         <a href="../print.html" title="Print this book" aria-label="Print this book">
@@ -175,7 +175,9 @@
 
                 <div id="mdbook-content" class="content">
                     <main>
-                        <h1 id="why-use-incentra"><a class="header" href="#why-use-incentra">Why Use Incentra</a></h1>
+                        <hr>
+<h2 id="description-reliable-secure-and-verifiable"><a class="header" href="#description-reliable-secure-and-verifiable">description: Reliable, Secure, and Verifiable</a></h2>
+<h1 id="why-use-incentra"><a class="header" href="#why-use-incentra">Why Use Incentra</a></h1>
 <ul>
 <li>Powered by <a href="https://coprocessor-docs.brevis.network/">Brevis zkCoprocessor</a>, rewards are calculated directly in the ZK circuits and directly verified on-chain, ensuring trustless, transparent and verifiable reward computation. Users can independently verify reward amounts without relying on any centralized authority.</li>
 <li>Backed by Incentra’s reliable SLA that guarantees 99.9% uptime, ensuring minimal disruptions and maximum reliability.</li>
